--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "ui:dev": "turbo run dev --filter=@fwu/vidis-rostering-ui",
     "lint": "turbo run lint",
     "test": "turbo run test",
+    "test:cov": "turbo run test:cov",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "prepare": "husky"
   },
