--- a/.github/workflows/sanity-checks.yml
+++ b/.github/workflows/sanity-checks.yml
@@ -15,7 +15,14 @@ jobs:
       - name: Check if package manager is pnpm
         run: 'test ! -f yarn.lock && test ! -f package-lock.json && test -f pnpm-lock.yaml'
         shell: bash
-
+  monorepo:
+    name: Monorepo Lint
+    runs-on: ubuntu-latest
+    needs: package-manager
+    steps:
+      - uses: actions/checkout@v4
+      - name: Lint monorepo
+        uses: QuiiBz/sherif@v1
   linter:
     name: Linter
     runs-on: ubuntu-latest
