--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@fwu-rostering/ui": "workspace:*",
+    "jose": "^6.1.0",
     "next": "^15.5.0",
+    "openid-client": "^6.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
