--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,15 +7,19 @@
     "build": "nest build",
     "start": "nest start",
     "debug": "nest start --debug --watch",
-    "lint": "eslint",
+    "lint": "eslint . --max-warnings=0",
     "check-types": "tsc --noEmit",
     "test": "jest",
     "test:cov": "jest --coverage"
   },
   "dependencies": {
+    "@fwu-rostering/utils": "workspace:*",
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/swagger": "^11.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
