--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,12 +15,19 @@
   "dependencies": {
     "@fwu-rostering/utils": "workspace:*",
     "@nestjs/common": "^11.1.6",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "reflect-metadata": "^0.2.2"
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.25",
+    "typeorm-naming-strategies": "^4.1.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@fwu-rostering/eslint-config": "workspace:*",
