Test SSO for UI (#8)

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "turbo run dev",
     "api:dev": "turbo run dev --filter=@fwu/vidis-rostering-api",
     "ui:dev": "turbo run dev --filter=@fwu/vidis-rostering-ui",
+    "infra:up": "docker compose -f dev_env/docker-compose.yml -p vidis-rostering up -d",
+    "infra:down": "docker compose -f dev_env/docker-compose.yml -p vidis-rostering down --remove-orphans",
     "lint": "turbo run lint",
     "test": "turbo run test",
     "test:cov": "turbo run test:cov",
