--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fwu-rostering/ui": "workspace:*",
+    "cookie": "^1.0.2",
     "jose": "^6.1.0",
     "next": "^15.5.0",
     "openid-client": "^6.7.0",
