--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,4 +1,5 @@
 {
   "extends": "@fwu-rostering/typescript-config/nest.json",
+  "compilerOptions": { "outDir": "dist" },
   "exclude": ["dist/*"]
 }
