--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@fwu/vidis-rostering",
   "private": true,
   "scripts": {
+    "prepare": "[ \"$NODE_ENV\" = \"production\" ] || husky",
     "build": "turbo run build",
     "dev": "turbo run dev",
     "api:dev": "turbo run dev --filter=@fwu/vidis-rostering-api",
@@ -11,10 +12,10 @@
     "lint": "turbo run lint",
     "test": "turbo run test",
     "test:cov": "turbo run test:cov",
+    "clean": "turbo run clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prettier:check": "prettier --check \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types",
-    "prepare": "husky"
+    "check-types": "turbo run check-types"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -25,8 +26,9 @@
     "turbo": "^2.5.6",
     "typescript": "5.9.2"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.15.1",
   "engines": {
-    "node": ">=22"
+    "node": ">=22",
+    "pnpm": ">=10"
   }
 }
