--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,12 +40,12 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.15.3",
     "@types/supertest": "^6.0.3",
-    "eslint": "^9.33.0",
-    "jest": "^30.0.5",
+    "jest": "catalog:",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
-    "typescript": "5.9.2"
+    "eslint": "catalog:",
+    "typescript": "catalog:"
   }
 }
