--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -11,13 +11,13 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@next/eslint-plugin-next": "^15.5.0",
-    "eslint": "^9.33.0",
+    "eslint": "catalog:",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-turbo": "^2.5.0",
     "globals": "^16.3.0",
-    "typescript": "5.9.2",
+    "typescript": "catalog:",
     "typescript-eslint": "^8.40.0"
   }
 }
