--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -47,5 +47,8 @@
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "typescript": "catalog:"
+  },
+  "engines" : {
+    "node" : ">=22.19.0"
   }
 }
