--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -4,8 +4,5 @@ AUTH_CLIENT_SECRET=your-client-secret
 LOG_LEVEL=log
 LOG_FORMAT=plain # or json
 
-POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
-POSTGRES_USER=vidis
-POSTGRES_PASSWORD=yourpassword
-POSTGRES_DATABASE=vidis_rostering_dev
+DB_MAIN_URL=postgre://postgres:postgres@localhost:5432/postgres
+DB_REPLICA_URL=postgre://postgres:postgres@localhost:5432/postgres
