--- a/dev_env/docker-compose.yml
+++ b/dev_env/docker-compose.yml
@@ -25,6 +25,18 @@ services:
     volumes:
       - certificates:/certs
 
+  postgres:
+    image: postgres:17
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+      PGDATA: /var/lib/postgresql/data
+    ports:
+      - 54320:5432
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
 volumes:
   certificates:
-    driver: local
+  postgres_data:
