--- a/turbo.json
+++ b/turbo.json
@@ -11,12 +11,9 @@
         "AUTH_URL",
         "AUTH_CLIENT_ID",
         "AUTH_CLIENT_SECRET",
-        "POSTGRES_HOST",
-        "POSTGRES_PORT",
-        "POSTGRES_USER",
-        "POSTGRES_PASSWORD",
-        "POSTGRES_DATABASE",
-        "POSTGRES_PASSWORD",
+        "DB_MAIN_URL",
+        "DB_REPLICA_URL",
+        "DATABASE_POOL_SIZE",
         "SESSION_SECRET"
       ],
       "outputs": [".next/**", "dist/**", "!.next/cache/**"]
