--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -6,3 +6,15 @@ LOG_FORMAT=plain # or json
 
 DB_MAIN_URL=postgre://postgres:postgres@localhost:5432/postgres
 DB_REPLICA_URL=postgre://postgres:postgres@localhost:5432/postgres
+
+PSEUDONYMIZATION_SALT_ENDPOINT="https://nothing-to-see-here.org"
+
+IDP_EDUPLACES_TOKEN_ENDPOINT="https://nothing-to-see-here.org"
+IDP_EDUPLACES_API_ENDPOINT="https://nothing-to-see-here.org"
+IDP_EDUPLACES_CLIENT_ID="..."
+IDP_EDUPLACES_CLIENT_SECRET="..."
+
+IDP_EDUPLACES_STAGING_TOKEN_ENDPOINT="https://nothing-to-see-here.org"
+IDP_EDUPLACES_STAGING_API_ENDPOINT="https://nothing-to-see-here.org"
+IDP_EDUPLACES_STAGING_CLIENT_ID="..."
+IDP_EDUPLACES_STAGING_CLIENT_SECRET="..."
