--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,8 +9,8 @@
     "debug": "nest start --debug --watch",
     "lint": "eslint . --max-warnings=0",
     "check-types": "tsc --noEmit",
-    "test": "jest",
-    "test:cov": "jest --coverage",
+    "test": "NODE_OPTIONS=\"--experimental-vm-modules\" jest",
+    "test:cov": "NODE_OPTIONS=\"--experimental-vm-modules\" jest --coverage",
     "clean": "rm -rf dist/ .turbo/",
     "db:migration:build": "tsc",
     "db:migration:generate": "zx --verbose scripts/database/create-migration.mjs",
@@ -30,10 +30,12 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "debug": "^4.4.3",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.25",
     "typeorm-naming-strategies": "^4.1.0",
+    "uuid": "^13.0.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
+    "@types/debug": "^4.1.12",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.15.3",
