EP-1067: Add tests (#15)
* Add Jest tests for IdP authentication.

* Add Jest tests for IdP aggregator.

* Add Jest tests for IdP adapters.

* Add Jest tests for IdP fetchers.

* Add Jest tests for pseudonymization.

* Fix possible null or undefined property access.

* Fix several warnings in new test code.

* Fix several warnings in new test code.

* Fix several warnings in new test code.

* Fix several warnings in new test code.

* Add typecheck to CI

* Update apps/api/src/identity-provider/adapter/eduplaces-staging/eduplaces-staging-adapter.spec.ts

Co-authored-by: Tim Siebels <tim@eduplaces.de>

* Implementing changes from PR comments.

* Update apps/api/src/identity-provider/adapter/adapter-interface.spec.ts

Co-authored-by: Tim Siebels <tim@eduplaces.de>

* Update apps/api/src/identity-provider/fetcher/schulconnex/schulconnex.fetcher.spec.ts

Co-authored-by: Tim Siebels <tim@eduplaces.de>

* Cleanup of identity-provider tests.

* Fix issue with TestFetcher in mock module for abstract fetcher tests.

* Fix typecheck in CI

* Remove mocks where possible

* Remove unnecessary mock config in eduplaces adapter tests.

* Cleanup.

---------

Co-authored-by: Tim Siebels <tim@eduplaces.de>

--- a/.github/workflows/sanity-checks.yml
+++ b/.github/workflows/sanity-checks.yml
@@ -44,6 +44,8 @@ jobs:
         run: pnpm install
       - name: Test Code Linting
         run: pnpm lint
+      - name: Typecheck
+        run: pnpm check-types
 
   prettier:
     name: Prettier
