--- a/apps/api/.env.test
+++ b/apps/api/.env.test
@@ -3,3 +3,13 @@ POSTGRES_PASSWORD='postgres'
 POSTGRES_DATABASE='test_database'
 POSTGRES_PORT=54329
 LOG_LEVEL=verbose
+
+IDP_EDUPLACES_TOKEN_ENDPOINT=https://token-endpoint.example.local
+IDP_EDUPLACES_API_ENDPOINT=https://api-endpoint.example.local
+IDP_EDUPLACES_CLIENT_ID=test-client-id
+IDP_EDUPLACES_CLIENT_SECRET=test-client-secret
+
+IDP_EDUPLACES_STAGING_TOKEN_ENDPOINT=https://staging-token-endpoint.example.local
+IDP_EDUPLACES_STAGING_API_ENDPOINT=https://staging-api-endpoint.example.local
+IDP_EDUPLACES_STAGING_CLIENT_ID=test-staging-client-id
+IDP_EDUPLACES_STAGING_CLIENT_SECRET=test-staging-client-secret
