--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,7 +20,10 @@
     "db:fixture": "zx --verbose scripts/database/load-fixture.mjs"
   },
   "dependencies": {
+    "@apollo/server": "^5.0.0",
+    "@as-integrations/express5": "^1.1.2",
     "@fwu-rostering/utils": "workspace:*",
+    "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
@@ -31,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "debug": "^4.4.3",
+    "graphql": "^16.11.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.25",
