--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,8 @@
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "env": [
+        "PORT",
+        "NODE_ENV",
         "AUTH_INTROSPECTION_URL",
         "AUTH_URL",
         "AUTH_CLIENT_ID",
