--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  ORGANIZATION: eduplaces
-  IMAGE: vidis-rostering
+  ORGANIZATION: ${{ github.repository_owner }}
+  IMAGE: ${{ github.repository }}
 
 jobs:
   build:
