--- a/.prettierrc
+++ b/.prettierrc
@@ -7,10 +7,9 @@
   "endOfLine": "lf",
   "quoteProps": "consistent",
   "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
-  "importOrder": ["^node:(.*)$", "<THIRD_PARTY_MODULES>", "^@eduplaces/(.*)$", "^[./]"],
+  "importOrder": ["^node:(.*)$", "<THIRD_PARTY_MODULES>", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "importOrderGroupNamespaceSpecifiers": true,
   "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"]
 }
-
