EP-1064: Clearance Process (#18)
* Add Jest tests for IdP authentication.

* Add Jest tests for IdP aggregator.

* Add Jest tests for IdP adapters.

* Add Jest tests for IdP fetchers.

* Add Jest tests for pseudonymization.

* Fix possible null or undefined property access.

* Fix several warnings in new test code.

* Fix several warnings in new test code.

* Fix several warnings in new test code.

* Fix several warnings in new test code.

* Add typecheck to CI

* Update apps/api/src/identity-provider/adapter/eduplaces-staging/eduplaces-staging-adapter.spec.ts

Co-authored-by: Tim Siebels <tim@eduplaces.de>

* Implementing changes from PR comments.

* Update apps/api/src/identity-provider/adapter/adapter-interface.spec.ts

Co-authored-by: Tim Siebels <tim@eduplaces.de>

* Update apps/api/src/identity-provider/fetcher/schulconnex/schulconnex.fetcher.spec.ts

Co-authored-by: Tim Siebels <tim@eduplaces.de>

* Cleanup of identity-provider tests.

* Working on clearance logic.

* Fix issue with TestFetcher in mock module for abstract fetcher tests.

* Working on clearance logic.

* Working on clearance logic.

* Fix typecheck in CI

* Remove mocks where possible

* Working on group fetching.

* Working on group fetching.

* Remove unnecessary mock config in eduplaces adapter tests.

* Cleanup.

* Working on clearance data flow.

* Working on clearance implementation.

* Working on clearance implementation.

* Working on clearance implementation.

* Working on clearance implementation.

* Refactor tests to match new clearance and filtration logic.

* Fix linting error in aggregator specs.

* Change clearance group ID gathering method to return a Set.

* Fix type error in schulconnex fetcher specs.

---------

Co-authored-by: Claudio De Facci <claudio@exploreimpact.de>

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,6 +11,9 @@ catalog:
   react-dom: ^19.1.0
   typescript: ^5.9.2
 
+ignoredBuiltDependencies:
+  - '@apollo/protobufjs'
+
 onlyBuiltDependencies:
   - '@nestjs/core'
   - '@scarf/scarf'
