--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,6 +1,12 @@
-AUTH_INTROSPECTION_URL=https://aai-test.vidis.schule/auth/realms/vidis/protocol/openid-connect/token/introspect
+AUTH_VALIDATION=verify-jwt # Options: off | verify-jwt | introspect; default: verify-jwt
+# for VALIDATION=introspect
+# AUTH_INTROSPECTION_URL=https://aai-test.vidis.schule/auth/realms/vidis/protocol/openid-connect/token/introspect
+# for VALIDATION=verify-jwt
+AUTH_WELL_KNOWN_URL=https://aai-test.vidis.schule/auth/realms/vidis/.well-known/openid-configuration
+
 AUTH_CLIENT_ID=vidis-rostering-api
 AUTH_CLIENT_SECRET=your-client-secret
+AUTH_COOKIE_SECRET=your-cookie-secret
 LOG_LEVEL=log
 LOG_FORMAT=plain # or json
 
