--- a/apps/api/.env.test
+++ b/apps/api/.env.test
@@ -3,6 +3,8 @@ POSTGRES_PASSWORD='postgres'
 POSTGRES_DATABASE='test_database'
 POSTGRES_PORT=54329
 LOG_LEVEL=verbose
+AUTH_VALIDATION=introspect
+AUTH_INTROSPECTION_URL=https://introspection-endpoint.example.local
 
 IDP_EDUPLACES_TOKEN_ENDPOINT=https://token-endpoint.example.local
 IDP_EDUPLACES_API_ENDPOINT=https://api-endpoint.example.local
