--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.2",
     "debug": "^4.4.3",
     "graphql": "^16.11.0",
+    "jose": "^6.1.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.25",
