--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -4,15 +4,14 @@
     "plugins": [
       {
         "name": "next"
+      },
+      {
+        "name": "gql.tada/ts-plugin",
+        "schema": "../api/schema/schema.graphql",
+        "tadaOutputLocation": "./app/lib/gql-tada/graphql-env.d.ts"
       }
     ]
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "next-env.d.ts",
-    "next.config.js",
-    ".next/types/**/*.ts"
-  ],
+  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
