--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,6 +16,7 @@
     "@fwu-rostering/typescript-config": "workspace:*",
     "@types/jest": "^30.0.0",
     "eslint": "catalog:",
+    "eslint-plugin-turbo": "^2.5.0",
     "jest": "catalog:"
   }
 }
