--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -55,6 +56,7 @@
     "@types/node": "^22.15.3",
     "@types/supertest": "^6.0.3",
     "eslint": "catalog:",
+    "eslint-plugin-turbo": "^2.5.0",
     "jest": "catalog:",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
