--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,7 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
+    "eslint-plugin-turbo": "^2.5.0",
     "typescript": "catalog:"
   },
   "dependencies": {
