--- a/turbo.json
+++ b/turbo.json
@@ -48,6 +48,10 @@
       "dependsOn": ["^clean"],
       "cache": false
     },
+    "start": {
+      "cache": false,
+      "persistent": true
+    },
     "dev": {
       "cache": false,
       "persistent": true
