--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,12 +7,11 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  ORGANIZATION: ${{ github.repository_owner }}
   IMAGE: ${{ github.repository }}
 
 jobs:
-  build:
-    name: Build Docker Images
+  build-api:
+    name: Build API Docker Images
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -29,7 +28,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.ORGANIZATION }}/${{ env.IMAGE }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE }}-api
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -43,5 +42,39 @@ jobs:
         with:
           context: .
           file: 'apps/api/Dockerfile'
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+  build-ui:
+    name: Build UI Docker Images
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Log in to the container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE }}-ui
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build and Push API Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: 'apps/ui/Dockerfile'
           push: true
           tags: ${{ steps.meta.outputs.tags }}
