--- a/helm/vidis-rostering/templates/api/service.yaml
+++ b/helm/vidis-rostering/templates/api/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ include "vidis-rostering.apiFullname" . }}
   labels:
-    {{- include "vidis-rostering.labels" . | nindent 4 }}
+    {{- include "vidis-rostering.apiLabels" . | nindent 4 }}
 spec:
   type: {{ .Values.api.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "vidis-rostering.selectorLabels" . | nindent 4 }}
+    {{- include "vidis-rostering.apiSelectorLabels" . | nindent 4 }}
