--- a/helm/vidis-rostering/templates/ui/httproute.yaml
+++ b/helm/vidis-rostering/templates/ui/httproute.yaml
@@ -1,27 +1,27 @@
-{{- if .Values.api.httpRoute.enabled -}}
-{{- $fullName := include "vidis-rostering.apiFullname" . -}}
-{{- $svcPort := .Values.api.service.port -}}
+{{- if .Values.ui.httpRoute.enabled -}}
+{{- $fullName := include "vidis-rostering.uiFullname" . -}}
+{{- $svcPort := .Values.ui.service.port -}}
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "vidis-rostering.apiLabels" . | nindent 4 }}
-  {{- with .Values.api.httpRoute.annotations }}
+    {{- include "vidis-rostering.uiLabels" . | nindent 4 }}
+  {{- with .Values.ui.httpRoute.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
   parentRefs:
-    {{- with .Values.api.httpRoute.parentRefs }}
+    {{- with .Values.ui.httpRoute.parentRefs }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.api.httpRoute.hostnames }}
+  {{- with .Values.ui.httpRoute.hostnames }}
   hostnames:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   rules:
-    {{- range .Values.api.httpRoute.rules }}
+    {{- range .Values.ui.httpRoute.rules }}
     {{- with .matches }}
     - matches:
       {{- toYaml . | nindent 8 }}
