Improve authentication for UI (#25)

--- a/apps/ui/.env.example
+++ b/apps/ui/.env.example
@@ -1,3 +1,4 @@
+SELF_BASE_URL='https://localhost'
 SESSION_SECRET=your_session_secret_here
 AUTH_URL='https://aai-test.vidis.schule/auth/realms/vidis'
 AUTH_CLIENT_ID=client-id
