--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -16,14 +16,33 @@
     "@apollo/client": "^4.0.8",
     "@apollo/client-integration-nextjs": "^0.14.1",
     "@fwu-rostering/ui": "workspace:*",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/postcss": "^4.1.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "cookie": "^1.0.2",
     "gql.tada": "^1.8.13",
     "jose": "^6.1.0",
+    "lucide-react": "^0.555.0",
     "next": "^15.5.7",
     "openid-client": "^6.7.0",
+    "postcss": "^8.5.6",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "rxjs": "^7.8.2"
+    "react-hook-form": "^7.68.0",
+    "rxjs": "^7.8.2",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@fwu-rostering/eslint-config": "workspace:*",
@@ -33,6 +52,7 @@
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-turbo": "^2.5.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "catalog:"
   }
 }
