--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -10,7 +10,10 @@
         "schema": "../api/schema/schema.graphql",
         "tadaOutputLocation": "./app/lib/gql-tada/graphql-env.d.ts"
       }
-    ]
+    ],
+    "paths": {
+      "@/*": ["./app/*"]
+    }
   },
   "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "next.config.js", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
