--- a/dev_env/reverse-proxy/config/nginx.conf.template
+++ b/dev_env/reverse-proxy/config/nginx.conf.template
@@ -2,6 +2,11 @@ upstream ui {
   server host.docker.internal:${UPSTREAM_PORT};
 }
 
+map $http_upgrade $connection_upgrade {
+  default upgrade;
+  ''      close;
+}
+
 server {
   listen 443 ssl;
 
@@ -23,5 +28,9 @@ server {
     proxy_set_header  X-Real-IP         $remote_addr;
     proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Proto $http_x_forwarded_proto;
+
+
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
   }
 }
