--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -34,6 +34,7 @@
     "jose": "^6.1.0",
     "lucide-react": "^0.555.0",
     "next": "^15.5.7",
+    "next-intl": "^4.5.8",
     "openid-client": "^6.7.0",
     "postcss": "^8.5.6",
     "react": "catalog:",
