--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -12,18 +12,23 @@ LOG_FORMAT=plain # or json
 DB_MAIN_URL=postgre://postgres:postgres@localhost:5432/postgres
 DB_REPLICA_URL=postgre://postgres:postgres@localhost:5432/postgres
 
-PSEUDONYMIZATION_SALT_ENDPOINT="https://nothing-to-see-here.org"
+PSEUDONYMIZATION_SALT_ENDPOINT="https://nothing-to-see-here.tld"
 
 OFFERS_API_ENDPOINT="https://service-stage.vidis.schule/o/vidis-rest/v1.0"
 OFFERS_CLIENT_ID="..."
 OFFERS_CLIENT_SECRET="..."
 
-IDM_EDUPLACES_TOKEN_ENDPOINT="https://nothing-to-see-here.org"
-IDM_EDUPLACES_API_ENDPOINT="https://nothing-to-see-here.org"
+IDM_EDUPLACES_TOKEN_ENDPOINT="https://nothing-to-see-here.tld"
+IDM_EDUPLACES_API_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_EDUPLACES_CLIENT_ID="..."
 IDM_EDUPLACES_CLIENT_SECRET="..."
 
-IDM_EDUPLACES_STAGING_TOKEN_ENDPOINT="https://nothing-to-see-here.org"
-IDM_EDUPLACES_STAGING_API_ENDPOINT="https://nothing-to-see-here.org"
+IDM_EDUPLACES_STAGING_TOKEN_ENDPOINT="https://nothing-to-see-here.tld"
+IDM_EDUPLACES_STAGING_API_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_EDUPLACES_STAGING_CLIENT_ID="..."
 IDM_EDUPLACES_STAGING_CLIENT_SECRET="..."
+
+IDM_DE_BY_VIDIS_IDP_TOKEN_ENDPOINT="https://nothing-to-see-here.tld"
+IDM_DE_BY_VIDIS_IDP_API_ENDPOINT="https://nothing-to-see-here.tld"
+IDM_DE_BY_VIDIS_IDP_CLIENT_ID="..."
+IDM_DE_BY_VIDIS_IDP_CLIENT_SECRET="..."
