--- a/apps/api/.env.test
+++ b/apps/api/.env.test
@@ -15,3 +15,8 @@ IDM_EDUPLACES_STAGING_TOKEN_ENDPOINT=https://staging-token-endpoint.example.loca
 IDM_EDUPLACES_STAGING_API_ENDPOINT=https://staging-api-endpoint.example.local
 IDM_EDUPLACES_STAGING_CLIENT_ID=test-staging-client-id
 IDM_EDUPLACES_STAGING_CLIENT_SECRET=test-staging-client-secret
+
+IDM_DE_BY_VIDIS_IDP_TOKEN_ENDPOINT="https://de-by-vidis-idp-token-endpoint.example.local"
+IDM_DE_BY_VIDIS_IDP_API_ENDPOINT="https://de-by-vidis-idp-api-endpoint.example.local"
+IDM_DE_BY_VIDIS_IDP_CLIENT_ID="test-de-by-vidis-idp-client-id"
+IDM_DE_BY_VIDIS_IDP_CLIENT_SECRET="test-de-by-vidis-idp-client-secret"
