--- a/turbo.json
+++ b/turbo.json
@@ -29,6 +29,10 @@
         "IDM_EDUPLACES_STAGING_API_ENDPOINT",
         "IDM_EDUPLACES_STAGING_CLIENT_ID",
         "IDM_EDUPLACES_STAGING_CLIENT_SECRET",
+        "IDM_DE_BY_VIDIS_IDP_TOKEN_ENDPOINT",
+        "IDM_DE_BY_VIDIS_IDP_API_ENDPOINT",
+        "IDM_DE_BY_VIDIS_IDP_CLIENT_ID",
+        "IDM_DE_BY_VIDIS_IDP_CLIENT_SECRET",
         "OFFERS_API_ENDPOINT",
         "OFFERS_CLIENT_ID",
         "OFFERS_CLIENT_SECRET",
