--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -32,3 +32,10 @@ IDM_DE_BY_VIDIS_IDP_TOKEN_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_DE_BY_VIDIS_IDP_API_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_DE_BY_VIDIS_IDP_CLIENT_ID="..."
 IDM_DE_BY_VIDIS_IDP_CLIENT_SECRET="..."
+
+IDM_SAARLAND_TOKEN_ENDPOINT="https://nothing-to-see-here.tld"
+IDM_SAARLAND_API_ENDPOINT="https://nothing-to-see-here.tld"
+IDM_SAARLAND_CLIENT_ID="..."
+IDM_SAARLAND_CLIENT_SECRET="..."
+IDM_SAARLAND_SCOPE="..."
+IDM_SAARLAND_RESOURCE="..."
