--- a/apps/api/.env.test
+++ b/apps/api/.env.test
@@ -20,3 +20,10 @@ IDM_DE_BY_VIDIS_IDP_TOKEN_ENDPOINT="https://de-by-vidis-idp-token-endpoint.examp
 IDM_DE_BY_VIDIS_IDP_API_ENDPOINT="https://de-by-vidis-idp-api-endpoint.example.local"
 IDM_DE_BY_VIDIS_IDP_CLIENT_ID="test-de-by-vidis-idp-client-id"
 IDM_DE_BY_VIDIS_IDP_CLIENT_SECRET="test-de-by-vidis-idp-client-secret"
+
+IDM_SAARLAND_TOKEN_ENDPOINT="https://saarland-token-endpoint.example.local"
+IDM_SAARLAND_API_ENDPOINT="https://saarland-api-endpoint.example.local"
+IDM_SAARLAND_CLIENT_ID="test-saarland-client-id"
+IDM_SAARLAND_CLIENT_SECRET="test-saarland-client-secret"
+IDM_SAARLAND_SCOPE="scope"
+IDM_SAARLAND_RESOURCE="https://resource-123.tld"
