--- a/turbo.json
+++ b/turbo.json
@@ -33,6 +33,12 @@
         "IDM_DE_BY_VIDIS_IDP_API_ENDPOINT",
         "IDM_DE_BY_VIDIS_IDP_CLIENT_ID",
         "IDM_DE_BY_VIDIS_IDP_CLIENT_SECRET",
+        "IDM_SAARLAND_TOKEN_ENDPOINT",
+        "IDM_SAARLAND_API_ENDPOINT",
+        "IDM_SAARLAND_CLIENT_ID",
+        "IDM_SAARLAND_CLIENT_SECRET",
+        "IDM_SAARLAND_SCOPE",
+        "IDM_SAARLAND_RESOURCE",
         "OFFERS_API_ENDPOINT",
         "OFFERS_CLIENT_ID",
         "OFFERS_CLIENT_SECRET",
