Add ENABLED flags to every adapter (#35)

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -18,21 +18,25 @@ OFFERS_API_ENDPOINT="https://service-stage.vidis.schule/o/vidis-rest/v1.0"
 OFFERS_CLIENT_ID="..."
 OFFERS_CLIENT_SECRET="..."
 
+IDM_EDUPLACES_ENABLED=true
 IDM_EDUPLACES_TOKEN_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_EDUPLACES_API_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_EDUPLACES_CLIENT_ID="..."
 IDM_EDUPLACES_CLIENT_SECRET="..."
 
+IDM_EDUPLACES_STAGING_ENABLED=true
 IDM_EDUPLACES_STAGING_TOKEN_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_EDUPLACES_STAGING_API_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_EDUPLACES_STAGING_CLIENT_ID="..."
 IDM_EDUPLACES_STAGING_CLIENT_SECRET="..."
 
+IDM_DE_BY_VIDIS_IDP_ENABLED=true
 IDM_DE_BY_VIDIS_IDP_TOKEN_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_DE_BY_VIDIS_IDP_API_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_DE_BY_VIDIS_IDP_CLIENT_ID="..."
 IDM_DE_BY_VIDIS_IDP_CLIENT_SECRET="..."
 
+IDM_SAARLAND_ENABLED=true
 IDM_SAARLAND_TOKEN_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_SAARLAND_API_ENDPOINT="https://nothing-to-see-here.tld"
 IDM_SAARLAND_CLIENT_ID="..."
