--- a/apps/api/.env.test
+++ b/apps/api/.env.test
@@ -6,21 +6,25 @@ LOG_LEVEL=verbose
 AUTH_VALIDATION=introspect
 AUTH_INTROSPECTION_URL=https://introspection-endpoint.example.local
 
+IDM_EDUPLACES_ENABLED=true
 IDM_EDUPLACES_TOKEN_ENDPOINT=https://token-endpoint.example.local
 IDM_EDUPLACES_API_ENDPOINT=https://api-endpoint.example.local
 IDM_EDUPLACES_CLIENT_ID=test-client-id
 IDM_EDUPLACES_CLIENT_SECRET=test-client-secret
 
+IDM_EDUPLACES_STAGING_ENABLED=true
 IDM_EDUPLACES_STAGING_TOKEN_ENDPOINT=https://staging-token-endpoint.example.local
 IDM_EDUPLACES_STAGING_API_ENDPOINT=https://staging-api-endpoint.example.local
 IDM_EDUPLACES_STAGING_CLIENT_ID=test-staging-client-id
 IDM_EDUPLACES_STAGING_CLIENT_SECRET=test-staging-client-secret
 
+IDM_DE_BY_VIDIS_IDP_ENABLED=true
 IDM_DE_BY_VIDIS_IDP_TOKEN_ENDPOINT="https://de-by-vidis-idp-token-endpoint.example.local"
 IDM_DE_BY_VIDIS_IDP_API_ENDPOINT="https://de-by-vidis-idp-api-endpoint.example.local"
 IDM_DE_BY_VIDIS_IDP_CLIENT_ID="test-de-by-vidis-idp-client-id"
 IDM_DE_BY_VIDIS_IDP_CLIENT_SECRET="test-de-by-vidis-idp-client-secret"
 
+IDM_SAARLAND_ENABLED=true
 IDM_SAARLAND_TOKEN_ENDPOINT="https://saarland-token-endpoint.example.local"
 IDM_SAARLAND_API_ENDPOINT="https://saarland-api-endpoint.example.local"
 IDM_SAARLAND_CLIENT_ID="test-saarland-client-id"
