--- a/turbo.json
+++ b/turbo.json
@@ -25,20 +25,24 @@
         "IDM_EDUPLACES_API_ENDPOINT",
         "IDM_EDUPLACES_CLIENT_ID",
         "IDM_EDUPLACES_CLIENT_SECRET",
+        "IDM_EDUPLACES_ENABLED",
         "IDM_EDUPLACES_STAGING_TOKEN_ENDPOINT",
         "IDM_EDUPLACES_STAGING_API_ENDPOINT",
         "IDM_EDUPLACES_STAGING_CLIENT_ID",
         "IDM_EDUPLACES_STAGING_CLIENT_SECRET",
+        "IDM_EDUPLACES_STAGING_ENABLED",
         "IDM_DE_BY_VIDIS_IDP_TOKEN_ENDPOINT",
         "IDM_DE_BY_VIDIS_IDP_API_ENDPOINT",
         "IDM_DE_BY_VIDIS_IDP_CLIENT_ID",
         "IDM_DE_BY_VIDIS_IDP_CLIENT_SECRET",
+        "IDM_DE_BY_VIDIS_IDP_ENABLED",
         "IDM_SAARLAND_TOKEN_ENDPOINT",
         "IDM_SAARLAND_API_ENDPOINT",
         "IDM_SAARLAND_CLIENT_ID",
         "IDM_SAARLAND_CLIENT_SECRET",
         "IDM_SAARLAND_SCOPE",
         "IDM_SAARLAND_RESOURCE",
+        "IDM_SAARLAND_ENABLED",
         "OFFERS_API_ENDPOINT",
         "OFFERS_CLIENT_ID",
         "OFFERS_CLIENT_SECRET",
