--- a/charts/provisionierungs-api/values.yaml
+++ b/charts/provisionierungs-api/values.yaml
@@ -131,10 +131,10 @@ api:
     offersApiEndpoint: 'https://service-stage.vidis.schule/o/vidis-rest/v1.0'
     idmEduplacesTokenEndpoint: 'https://nothing-to-see-here.org'
     idmEduplacesApiEndpoint: 'https://nothing-to-see-here.org'
-    idmEduplacesStagingTokenEndpoint: 'https://nothing-to-see-here.org'
-    idmEduplacesStagingApiEndpoint: 'https://nothing-to-see-here.org'
-    idmDeByVidisIdpTokenEndpoint: 'https://nothing-to-see-here.org'
-    idmDeByVidisIdpApiEndpoint: 'https://nothing-to-see-here.org'
+    idmSaarlandTokenEndpoint: 'https://nothing-to-see-here.org'
+    idmSaarlandApiEndpoint: 'https://nothing-to-see-here.org'
+    idmSaarlandScope: ''
+    idmSaarlandResource: ''
 
   existingSecret:
     name: vidis-rostering-api-secrets
@@ -146,10 +146,8 @@ api:
     keyOffersClientSecret: 'offersClientSecret'
     keyIdmEduplacesClientId: 'idmEduplacesClientId'
     keyIdmEduplacesClientSecret: 'idmEduplacesClientSecret'
-    keyIdmEduplacesStagingClientId: 'idmEduplacesStagingClientId'
-    keyIdmEduplacesStagingClientSecret: 'idmEduplacesStagingClientSecret'
-    keyIdmDeByVidisIdpClientId: 'idmDeByVidisIdpClientId'
-    keyIdmDeByVidisIdpClientSecret: 'idmDeByVidisIdpClientSecret'
+    keyIdmSaarlandClientId: 'idmSaarlandClientId'
+    keyIdmSaarlandClientSecret: 'idmSaarlandClientSecret'
     keyPseudonymizationSaltEndpoint: 'pseudonymizationSaltEndpoint'
 
 ui:
