Add the option to configure tracing (#37)
* Add the option to configure tracing

* Fix prettier

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -43,3 +43,5 @@ IDM_SAARLAND_CLIENT_ID="..."
 IDM_SAARLAND_CLIENT_SECRET="..."
 IDM_SAARLAND_SCOPE="..."
 IDM_SAARLAND_RESOURCE="..."
+
+#OTEL_SDK_DISABLED=false
