--- a/.prettierrc
+++ b/.prettierrc
@@ -7,7 +7,7 @@
   "endOfLine": "lf",
   "quoteProps": "consistent",
   "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
-  "importOrder": ["^node:(.*)$", "<THIRD_PARTY_MODULES>", "^[./]"],
+  "importOrder": ["./instrumentation", "^node:(.*)$", "<THIRD_PARTY_MODULES>", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "importOrderGroupNamespaceSpecifiers": true,
