--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,11 +32,21 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/instrumentation-express": "0.52.0",
+    "@opentelemetry/instrumentation-http": "0.203.0",
+    "@opentelemetry/instrumentation-undici": "^0.19.0",
+    "@opentelemetry/resources": "^2.1.0",
+    "@opentelemetry/sdk-node": "0.208.0",
+    "@opentelemetry/sdk-trace-node": "^2.1.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "debug": "^4.4.3",
     "graphql": "^16.11.0",
     "jose": "^6.1.0",
+    "opentelemetry-instrumentation-typeorm": "^0.41.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.25",
