--- a/dev_env/docker-compose.yml
+++ b/dev_env/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - UPSTREAM_PORT=3000
     extra_hosts:
-      - 'host.docker.internal:host-gateway'
+      - "host.docker.internal:host-gateway"
 
   create_certificates:
     image: alpine
@@ -37,6 +37,36 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  tempo:
+    image: grafana/tempo:2.9.0
+    command: ["-config.file=/etc/tempo.yaml"]
+    ports:
+      #- "3200:3200" # tempo
+      #- "9095:9095" # tempo grpc
+      - "4317:4317" # otlp grpc
+      - "4318:4318" # otlp http
+    volumes:
+      - ./tempo/tempo.yaml:/etc/tempo.yaml
+      - tempo_data:/var/tempo
+    profiles:
+      - monitoring
+
+  grafana:
+    image: grafana/grafana:12.1
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+    ports:
+      - 4000:3000
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+    profiles:
+      - monitoring
+
 volumes:
   certificates:
   postgres_data:
+  grafana_data:
+  tempo_data:
